--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body >
 <div class="ambas-columnas">
   <div class="columna-izquierda">
-    <div id="zoom" onmouseover="mouseOver()" onmouseout="mouseOut()"><img src="IMG.jpg" alt="Foto de perfil"></div>
+    <div id="zoom" onmouseover="mouseOver()" onmouseout="mouseOut()"><img src=https://us.123rf.com/450wm/fizkes/fizkes2104/fizkes210400405/167446118-cierra-el-retrato-de-la-pantalla-de-la-cabeza-de-un-joven-cauc%C3%A1sico-sonriente-que-mira-la.jpg?ver=6g" alt="Foto de perfil"></div>
     <h1> Jason Lucas </h1>
     <p>Desarrollador web</p>
   
